<resources>
    <string name="app_name">Garden Helper</string>
    <string name="favourites">Favourites</string>
    <string name="account">Account</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email…</string>
    <string name="password">Password…</string>
    <string name="name">Name…</string>
    <string name="reset_password">Forgot Password</string>
    <string name="register">Create Account</string>
    <string name="create">Create</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_event">Add Event</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="button">Button</string>
    <string name="logout">Logout</string>
    <string name="account_image">Account Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="google_authorization">Google Authorization</string>
    <string name="facebook_authorization">Facebook Authorization</string>
    <string name="yourName">Ім\'я</string>
    <string name="yourSurname">Фамілія</string>
    <string name="enter">Введіть...</string>
    <string name="aboutyourself">Про себе...</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="nik">Нік</string>
    <string name="change_photo">Change photo</string>
    <string name="_70">70</string>
    <string name="space">" "</string>
    <string name="add_title">Добавте назву</string>
    <string name="add_additional_info">Додати додаткову інформацію</string>
    <string name="isImportant">Важливість виконання</string>
    <string name="set_date">Вкажіть дату</string>
</resources>