<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="MainFragments.SecondFragmentElements.NewEventFragment">

    <include
        android:id="@+id/toolbar_new_event"
        layout="@layout/toolbar_edit_profile_fragments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf = "@+id/mainConstraintNewEvent"
        />

    <LinearLayout
        android:id="@+id/mainConstraintNewEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_new_event">

        <EditText
            android:id="@+id/editTextAddTitle"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/editTextLineGreen"
            android:hint="@string/add_title"
            android:textSize="35sp"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/editTextAddInformation"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginBottom="34dp"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/editTextLineGreen"
            android:hint="@string/add_additional_info"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginBottom="49dp"
            android:backgroundTint="@color/editTextLineGreen"
            />

        <!--<EditText
            android:id="@+id/editTextAddIsImportant"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginBottom="49dp"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/editTextLineGreen"
            android:hint="@string/isImportant"
            android:inputType="textPersonName" />-->

        <EditText
            android:id="@+id/editTextAddDate"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/editTextLineGreen"
            android:hint="@string/set_date"
            android:inputType="date" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>